# project_streamlit

./: .gitignore  Cadastro.py  clientes.csv  pyproject.toml
pages/: Consulta.py
